# bank_operations

./: .coverage  .flake8  .gitignore  README.md  debug_script.py  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_generators_py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_generators_py.html  z_a44f0ac069e85531_test_masks_py.html  z_a44f0ac069e85531_test_processing_py.html  z_a44f0ac069e85531_test_widget_py.html
src/: __init__.py  decorators.py  external_api.py  file_handlers.py  generators.py  log_config.py  masks.py  processing.py  utils.py  widget.py
tests/: __init__.py  conftest.py  test_decorators.py  test_external_api.py  test_file_handlers.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
