[tool.poetry]
name = "bank_operations"
version = "0.1.0"
description = "Модуль для маскировки банковских данных"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"

[tool.black]
line-length = 119
target-version = ["py39"]
skip-string-normalization = true
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.mypy_cache
)/
'''

[tool.isort]
profile = "black"
line_length = 119
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = false
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["bank_operations"]

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.mypy_cache
)/
'''

[tool.flake8]
max-line-length = 119
ignore = "E203, W503"
exclude = ".git,__pycache__,*.pyc,.mypy_cache,.venv"
max-complexity = 10
statistics = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"